--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gencon-buddy",
+  "name": "gen-con-buddy",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for gencon-buddy goes here",
+  "description": "Small description for gen-con-buddy goes here",
   "repository": "",
   "license": "MIT",
   "author": "",
@@ -31,6 +31,7 @@
     "@ember/optional-features": "^2.0.0",
     "@ember/string": "^3.1.1",
     "@ember/test-helpers": "^3.2.0",
+    "@faker-js/faker": "^8.3.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "broccoli-asset-rev": "^3.0.0",
@@ -43,6 +44,7 @@
     "ember-cli-dependency-checker": "^3.3.2",
     "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-mirage": "^3.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~5.3.0",
@@ -54,6 +56,7 @@
     "ember-resolver": "^11.0.1",
     "ember-source": "~5.4.0",
     "ember-template-lint": "^5.11.2",
+    "ember-truth-helpers": "^4.0.3",
     "ember-welcome-page": "^7.0.2",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
@@ -62,6 +65,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-qunit": "^8.0.1",
     "loader.js": "^4.7.0",
+    "miragejs": "^0.1.48",
     "prettier": "^3.0.3",
     "qunit": "^2.20.0",
     "qunit-dom": "^2.0.0",
@@ -76,5 +80,8 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "date-fns": "^3.0.0"
   }
 }
