--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~5.3.0",
     "ember-fetch": "^8.1.2",
+    "ember-keyboard": "^8.2.1",
     "ember-load-initializers": "^2.1.2",
+    "ember-local-storage": "^2.0.7",
     "ember-modifier": "^4.1.0",
     "ember-page-title": "^8.0.0",
     "ember-qunit": "^8.0.1",
     "ember-resolver": "^11.0.1",
     "ember-source": "~5.4.0",
+    "ember-template-imports": "^4.1.0",
     "ember-template-lint": "^5.11.2",
     "ember-truth-helpers": "^4.0.3",
     "ember-welcome-page": "^7.0.2",
@@ -67,6 +70,7 @@
     "loader.js": "^4.7.0",
     "miragejs": "^0.1.48",
     "prettier": "^3.0.3",
+    "prettier-plugin-ember-template-tag": "^2.0.1",
     "qunit": "^2.20.0",
     "qunit-dom": "^2.0.0",
     "stylelint": "^15.11.0",
